--- a/chap1.tex
+++ b/chap1.tex
@@ -20,20 +20,26 @@ Pole shifting theorem is one of the basic results of the theory of linear dynami
 
 We will use the matrix representation as it is a very compact way of describing the system.
 
-To express solution of this system in similarly compact matter we will establish a notion of matrix exponential.
+To express solution of this system in similarly compact matter we will establish a notion of a matrix exponential.
 
 \begin{definition}
-	Let $X$ be real or complex square matrix. The exponential of $X$, denoted by $e^X$, is the square matrix of the same type given by the power series $$e^{X}=\sum _{k=0}^{\infty}\frac{1}{k!}X^{k}$$
-	where $X^0$ is defined to be the identity matrix $I$ with the same type as $X$.
+	Let $X$ be a real or complex square matrix. The exponential of $X$, denoted by $e^X$, is the square matrix of the same type given by the series $$e^{X}=\sum _{k=0}^{\infty}\frac{1}{k!}X^{k}$$
+	where $X^0$ is defined to be the identity matrix $I$ of the same type as $X$.
 \end{definition}
 
+For this definition to be valid, we need to show that the series converges for any real or complex square matrix. Firstly, we will define what does it mean for matrix to converge. In this text, will be using Frobenius norm to describe the notion of matrix convergence, but it is possible to use any matrix norm which satisfies a set of properties discussed in the next lemma.
+
 \begin{definition}
-	\termdef{Frobenius norm} is a matrix norm, denoted by $\norm{\cdot}_F$, which is defined for an arbitrary $n \times m$ matrix $A$ as $$\norm{A}_F=\sqrt{\sum^n_{i=1}\sum^m_{j=1}\abs{a_{i,j}}^2}$$
+	\termdef{Frobenius norm} is a matrix norm, denoted by $\norm{\cdot}_F$, which for an arbitrary $n \times m$ matrix $A$ is defined as $$\norm{A}_F=\sqrt{\sum^n_{i=1}\sum^m_{j=1}\abs{a_{i,j}}^2}$$
 \end{definition}
+
+\begin{remark}
+	In what follows, $\K$ will denote a field of either real or complex numbers.
+\end{remark}
 
 \begin{lemma}
 \label{lem:frobNormProperties}
-	Let $\K$ be a field. Then Frobenius norm satisfies following statements for any matrices $A$, $B$, $C\in \K^{n \times m}$, $D\in\K^{m\times o}$ and any scalar $\alpha \in \K$
+	Then Frobenius norm satisfies following statements for any matrices $A$, $B$, $C\in \K^{n \times m}$, $D\in\K^{m\times o}$ and any scalar $\alpha \in \K$.
 	\begin{itemize}
 		\item $\norm{A+B}_F\leq\norm{A}_F+\norm{B}_F$
 		\item $\norm{\alpha A}_F=\abs{\alpha}\norm{A}_F$
@@ -43,12 +49,12 @@ To express solution of this system in similarly compact matter we will establish
 \end{lemma}
 
 \begin{proof}
-	Can be simply shown from the definition of Frobenius form.
+	Can be simply shown from the definition of Frobenius form and properties of the absolute value.
 \end{proof}
 
 \begin{lemma}
 \label{lem:elementAbsoluteSize}
-	Let $\K$ be a field and let us have matrix $A^k=(a_{i,j}^{(k)})$ where $A\in\K^{n\times n}$. Then $\abs*{a_{i,j}^{(k)}}\leq\norm{A^k}_F\leq\norm{A}^k_F$. Specially, absolute value of any element of a matrix is always less or equal to the Frobenius norm of the matrix.
+	Absolute value of any element of a matrix is always less or equal to the Frobenius norm of the matrix. Let us have matrix  where $A\in\K^{n\times n}$. Then $\abs*{a_{i,j}^{(k)}}\leq\norm{A^k}_F\leq\norm{A}^k_F$. \underline{Specially}, for matrix $A^k=(a_{i,j}^{(k)})$ it holds .
 \end{lemma}
 
 \begin{proof}
@@ -56,7 +62,7 @@ To express solution of this system in similarly compact matter we will establish
 \end{proof}
 
 \begin{definition}
-	A matrix sequence $\{A_k\}_{k=0}^\infty$ of $n \times m$ matrices is said to \termdef{converge} to $n\times m$ matrix $A$, denoted by $A_k\longrightarrow A$, if the following condition is satisfied $$\forall\varepsilon\in\R, \varepsilon>0\quad\exists n_0\in\N\quad\forall n\in\N,n\geq n_0:||A_n-A||_F<\varepsilon$$
+	A matrix sequence $\{A_k\}_{k=0}^\infty$ of $n \times m$ matrices is said to \termdef{converge} to $n\times m$ matrix $A$, denoted by $A_k\longrightarrow A$, if $$\forall\varepsilon\in\R, \varepsilon>0\quad\exists n_0\in\N\quad\forall n\in\N,n\geq n_0:||A_n-A||_F<\varepsilon$$
 \end{definition}
 
 \begin{lemma}
@@ -67,11 +73,11 @@ To express solution of this system in similarly compact matter we will establish
 \begin{proof}
 	Let $A_k \rightarrow A$. Then we can for any $\varepsilon>0$ find such $n_0$ that $\norm{A_n-A}_F<\varepsilon$ for every $n\geq n_0$. Using Lemma \ref{lem:elementAbsoluteSize} we can write $$\abs*{a^{(n)}_{i,j}-a_{i,j}}\leq \norm{A_n-A}_F<\varepsilon$$ It follows that $\{A_k\}_{k=0}^\infty$ converges to $A$ elementwise.
 
-	Conversely, if the sequence converges elementwise to matrix $A$, then $\forall i\in\{1,\ldots,n\},\forall j\in\{1,\ldots,m\}$ it holds $$\forall \varepsilon\in\R,\varepsilon>0\quad\exists n_0\in\N\quad\forall n\in\N, n\geq n_0:|a^{(n)}_{i,j}-a_{i,j}|<\varepsilon$$ Let $\varepsilon$ be a positive real number. For every pair $(i,j)$ we find $n_0$ and we label it $n_{i,j}$. We put $N_0=\text{min}\{n_{i,j}\}$. Now $\forall n\in\N, n\geq N_0$ we have $$||A_n-A||_F=\sqrt{\sum^n_{i=1}\sum^m_{j=1}|a^{(n)}_{i,j}-a_{i,j}|^2}<\sqrt{nm\varepsilon^2}=\sqrt{nm}\varepsilon$$
+	Conversely, let $\varepsilon$ be a positive real number. For every position $(i,j)$ we find such $n_{i,j}$ that $$\forall n\geq n_{i,j}:\abs*{a^{(n)}_{i,j}-a_{i,j}}<\frac{\varepsilon}{\sqrt{nm}}$$ We put $N_0=\text{min}\{n_{i,j}\}$. Now $\forall n\in\N, n\geq N_0$ we have $$||A_n-A||_F=\sqrt{\sum^n_{i=1}\sum^m_{j=1}|a^{(n)}_{i,j}-a_{i,j}|^2}<\sqrt{nm\frac{\varepsilon^2}{nm}}=\varepsilon$$
 \end{proof}
 
 \begin{lemma}
-	Let $\{A_k\}_{k=0}^\infty$ be a matrix sequence of form $r\times s$. This sequence converges if and only if it is a \termdef{Cauchy sequence}, that is when the following condition is satisfied $$\forall\varepsilon\in\R, \varepsilon>0\quad\exists n_0\in\N\quad\forall m,n\in\N,m\geq n_0, n\geq n_0:||A_n-A_m||_F<\varepsilon$$
+	Let $\{A_k\}_{k=0}^\infty$ be a sequence of matrices over $\K$. This sequence converges if and only if it is a \termdef{Cauchy sequence}, that is when the following condition is satisfied $$\forall\varepsilon\in\R, \varepsilon>0\quad\exists n_0\in\N\quad\forall m,n\in\N,m\geq n_0, n\geq n_0:||A_n-A_m||_F<\varepsilon$$
 \end{lemma}
 
 \begin{proof}
@@ -80,14 +86,14 @@ To express solution of this system in similarly compact matter we will establish
 
 \begin{lemma}
 \label{lem:matrixSeriesFactoring}
-	Let $\K$ be a field, $\{A_k\}_{k=0}^\infty$ be a matrix sequence, where $A_k\in\K^{n\times m}$, $B\in\K^{r\times n}$ and $C\in\K^{m\times s}$. If $\sum^\infty_{k=0}A_k$ converges, then the following equation holds
+	Let $\{A_k\}_{k=0}^\infty$ be a matrix sequence, where $A_k\in\K^{n\times m}$, $B\in\K^{r\times n}$ and $C\in\K^{m\times s}$. If $\sum^\infty_{k=0}A_k$ converges, then the following equation holds
 	$$B\left(\sum^\infty_{k=0}A_k\right)C=\sum^\infty_{k=0}BA_kC$$
 \end{lemma}
 
 \begin{proof}
 	We know that for $N\in\N$ it holds
 	$$B\left(\sum^N_{k=0}A_k\right)C=\sum^N_{k=0}BA_kC$$
-	Now we have to show that the left side converges to $B\left(\sum^\infty_{k=0}A_k\right)C$. Let $\varepsilon>0$ be fixed. We want to find such $N_0$ that for every $N\in\N,N\geq N_0$ it holds 
+	Now we have to show that the left side converges to $B\left(\sum^\infty_{k=0}A_k\right)C$. Let $\varepsilon\in\R,\varepsilon>0$ be fixed. We want to find such $N_0$ that for every $N\in\N,N\geq N_0$ it holds 
 	$$\norm{B\left(\sum^\infty_{k=0}A_k\right)C-B\left(\sum^N_{l=0}A_l\right)C}_F=\norm{B\left(\sum^\infty_{k=0}A_k-\sum^N_{l=0}A_l\right)C}_F<\varepsilon$$ 
 	Since $\sum^\infty_{k=0}\frac{1}{k!}A^k$ converges we can find such $N_1$ that $\forall N\geq N_1$ it holds
 	$$\norm{\sum^\infty_{k=0}A_k-\sum^N_{l=0}A_l}_F<\frac{\varepsilon}{\norm{B}_F\norm{C}_F}$$ 
@@ -115,7 +121,7 @@ To express solution of this system in similarly compact matter we will establish
 \begin{proof}
 	\begin{enumerate}
 		\sloppy
-		\item This can be shown by showing that sequence of partial sums $\{\sum^N_{k=0}\frac{1}{k!}X^k\}_{N=0}^\infty$ is Cauchy. Let $M$, $N\in \N$, then thanks to properties of Frobenius norm it holds
+		\item This can be shown by showing that sequence of partial sums $\{\sum^N_{k=0}\frac{1}{k!}X^k\}_{N=0}^\infty$ is Cauchy. Let $M$, $N\in \N$, then by Lemma \ref{lem:frobNormProperties} it holds
 		
 		\begin{longeq}
 			\norm{\sum^M_{k=0}\frac{1}{k!}X^k-\sum^N_{l=0}\frac{1}{l!}X^l}_F=\norm{\sum^M_{k=N+1}\frac{1}{k!}X^k}_F\leq\sum^M_{k=N+1}\frac{1}{k!}||X||^k_F=\norm{\sum^M_{k=0}\frac{1}{k!}\norm{X}_F^k-\sum^N_{l=0}\frac{1}{l!}\norm{X}_F^l}_F
@@ -127,7 +133,7 @@ To express solution of this system in similarly compact matter we will establish
 		Because of the convergence of the matrix exponential we can use Lemma \ref{lem:matrixSeriesFactoring} and we get
 		$$e^{A}B=\sum^\infty_{k=0}\frac{1}{k!}A^{k}B\stackrel{AB=BA}{=\joinrel=\joinrel=}\sum^\infty_{k=0}\frac{1}{k!}BA^{k}=B\sum^\infty_{k=0}\frac{1}{k!}A^{k}=Be^{A}$$
 		
-		\item Follows from Lemma \ref{lem:matrixSeriesFactoring}
+		\item From Lemma \ref{lem:matrixSeriesFactoring} follows
 		\begin{longeq}
 			e^{R^{-1}XR}=\sum^\infty_{k=0}\frac{1}{k!}(R^{-1}XR)^{k}=\sum^\infty_{k=0}\frac{1}{k!}R^{-1}X^{k}R=R^{-1}\left(\sum^\infty_{k=0}\frac{1}{k!}X^{k}\right)R=R^{-1}e^{X}R
 		\end{longeq}
@@ -142,18 +148,15 @@ To express solution of this system in similarly compact matter we will establish
 
 		\item Let us write 
 		\begin{align*}
-			e^{A+B}
-			&=\sum^\infty_{k=0}\frac{1}{k!}(A+B)^{k}
-			=\sum^\infty_{k=0}\sum^k_{l=0}\binom{k}{l}\frac{1}{k!}A^{l}B^{k-l}
+			e^{A}e^{B}
+			&=\sum^\infty_{k=0}\frac{1}{k!}A^{k}\cdot\sum^\infty_{l=0}\frac{1}{l!}B^{l}
 			=\sum^\infty_{k=0}\sum^k_{l=0}\frac{1}{l!(k-l)!}A^{l}B^{k-l}
+			=\sum^\infty_{k=0}\sum^k_{l=0}\binom{k}{l}\frac{1}{k!}A^{l}B^{k-l}
 			\\
-			&=\sum^\infty_{k=0}\sum^\infty_{l=0}\frac{1}{k!l!}A^kB^l
-			=\sum^\infty_{k=0}\left(\frac{1}{k!}A^k\sum^\infty_{l=0}\frac{1}{l!}B^l\right)
-			=\sum^\infty_{k=0}\frac{1}{k!}A^{k}\cdot\sum^\infty_{k=0}\frac{1}{k!}B^{k}
-			\\
-			&=e^{A}e^B
+			&=\sum^\infty_{k=0}\frac{1}{k!}(A+B)^{k}
+			=e^{A+B}
 		\end{align*}
-		In the second equation we are using the assumption $AB=BA$. The crucial point is the forth equation in which we basically reorder the equation which we can do thanks to convergence. The rest is just factoring matrices out of series using Lemma \ref{lem:matrixSeriesFactoring} with convergence of matrix exponential.
+		The crucial point is the second equation in which we use Mertens' theorem. The theorem states that $\left(\sum_{i=0}^\infty a_i x^i\right) \cdot(\sum_{j=0}^\infty b_j x^j) = \sum_{k=0}^\infty a_l b_{k-l} x^k$ as long as at least one of the series on the left side is absolutely convergent. This condition is satisfied because matrix exponential converges absolutely for any matrix, as shown in the proof of the previous point. In the forth equation, we are using the assumption $AB=BA$. 
 	\end{enumerate}
 \end{proof}
 
@@ -165,7 +168,7 @@ To express solution of this system in similarly compact matter we will establish
 	Straight from the definition.
 \end{proof}
 
-Now using properties from Lemma \ref{lem:expprop} we can see that $\dot{x}(t)=Ax(t)$ is actually solved by $x(0)e^At$. Let us now discuss under what circumstances does the state $x(t)$ converge to $\nullvector$ for $t\rightarrow\infty$. 
+Now, using properties from Lemma \ref{lem:expprop} we can see that $\dot{x}(t)=Ax(t)$ is actually solved by $x(t)=e^{tA}x(0)$. Let us now discuss under what circumstances does the state $x(t)$ converge to $\nullvector$ for $t\rightarrow\infty$. 
 
 Let $A$ be real or complex matrix. Then there is a regular matrix $R\in \C^{n\times n}$ such that $$J=R^{-1}AR$$ is in the Jordan normal form. By substituting $y(t)=R^{-1}x(t)$, which is equivalent with changing the basis of our system, we get 
 \begin{align*}
@@ -173,9 +176,9 @@ Let $A$ be real or complex matrix. Then there is a regular matrix $R\in \C^{n\ti
 	\dot{y}(t)&=R^{-1}ARy(t) \\
 	\dot{y}(t)&=Jy(t)
 \end{align*}
- and therefore the solution is $$y(t)=e^{tJ}y(0)$$ 
+and therefore the solution is $$y(t)=e^{tJ}y(0)$$ It is sufficient to show that $y(t)$ converges to \nullvector, because since $R$ is an invertible matrix, $y(t)$ converges to $\nullvector$ if and only if $x(t)$ converges to \nullvector.
 
-We know that every Jordan block $J_{\lambda,n}$ in the matrix $J$ can be decomposed as $J_{\lambda,n}=\lambda I_n+N_n$, $n \in\N$ where $N_n$ is $n \times n$ nilpotent matrix satisfying $n_{i,j}=\delta_{i,j-1}$. For example for $n=4$ we have
+We know that every Jordan block $J_{\lambda,n}$ in the matrix $J$ can be decomposed as $J_{\lambda,n}=\lambda I_n+N_n$, $n \in\N$ where $N_n$ is $n \times n$ nilpotent matrix satisfying $n_{i,j}=\delta_{i,j-1}$. For example, in case of $n=4$ we have
 \begin{equation*}
 	N_4=
 	\begin{pmatrix}
@@ -199,7 +202,7 @@ We know that every Jordan block $J_{\lambda,n}$ in the matrix $J$ can be decompo
 		0 & 0 & 0 & 0 
 	\end{pmatrix}
 \end{equation*}
-It is also true that $(N_n)^k_{i,j}=\delta_{i,j-k}$ and $(N_n)^n=O_{n \times n}$, since every right multiplication by matrix $N$ shifts the multiplied matrix's columns to the right by one column that is it maps matrix $(v_1,\ldots,v_n)$ onto $(o,v_1,\ldots,v_{n-1})$. 
+It is also true that $(N_n)^k_{i,j}=\delta_{i,j-k}$ and $(N_n)^n=O_{n \times n}$, since every right multiplication by matrix $N$ shifts the multiplied matrix's columns to the right by one column, that is, it maps matrix $(v_1,\ldots,v_n)$ onto $(\nullvector,v_1,\ldots,v_{n-1})$. 
 
 By using Lemma \ref{lem:expprop}, we now for each Jordan block $J_{\lambda,n}$ have $$e^{tJ_{\lambda,n}}=e^{t(\lambda I + N)}=e^{t\lambda I}e^{tN}=e^{\lambda t}e^{tN}$$ Let $\lambda = a+ib$ where $a$,$b \in \R$. Then we have $$e^{tJ_{\lambda,n}}=e^{at}e^{ibt}e^{tN}$$ We know that $|e^{ibt}|=1$ and that $$e^{tN}=\sum^\infty_{k=0}\frac{t^k}{k!}N^k=\sum^{n-1}_{k=0}\frac{t^k}{k!}N^k$$ since $(N_n)^n=O_{n \times n}$. Therefore, we can see that every element of matrix $e^{tN}$ is a polynomial of degree less than $n$. It follows that $e^{tJ_{\lambda,n}}$ approaches $O_{n \times n}$ in infinity if $$\lim_{t\to\infty}e^{at}t^{n-1}=0$$ This holds for any $n\in\N$ as long as $a<0$. 
 
@@ -222,7 +225,7 @@ Because $J$ to the power of any natural number holds its block form, we can writ
 		0 & 0 & \ldots & e^{J_{\lambda_r,n_r}}
 	\end{pmatrix}
 \end{equation*}
-where zeroes in the matrices represent zero matrices of appropriate sizes. Therefore, since $y(0)$ is a constant vector, we see that $y(t)=e^{Jt}y(0)$ converges to $\nullvector$ if all the eigenvalues of matrix $A$ have negative real parts. As the last step we find $x(t)=Ry(t)$ and $x(0)=Ry(0)$.
+where zeroes in the matrices represent zero matrices of appropriate sizes. Therefore, since $y(0)$ is a constant vector, we see that $y(t)=e^{tJ}y(0)$ converges to $\nullvector$ if all the eigenvalues $\lambda_i$ of matrix $A$ have negative real parts. As the last step, we calculate $x(t)=Ry(t)$ and $x(0)=Ry(0)$.
 
 \begin{example}
 	Consider higher order differential equation $$x^{(n)}(t)+a_1x^{(n-1)}(t)+\ldots+a_{n-1}x'(t)+a_nx(t)=0$$ where $x(t)\colon\C\rightarrow\C$. This equation can be solved as system of linear differential equations of first order $\dot{z}(t)=Az(t)$ by choosing fundamental matrix $A$ and state vector $z(t)$ as follows
@@ -255,9 +258,9 @@ where zeroes in the matrices represent zero matrices of appropriate sizes. There
 
 In a general case, this is called an \termdef{open-loop control} system because the control is not dependent on previous state of the system.
 
-We can imagine this system as follows. The first part of the equation $\dot{x}(t)=Ax(t)$ can be thought of as the model of machine or event that we want to control and $Bu(t)$ as our control mechanism. The $B$ matrix is our ``control board'' and $u(t)$ is us deciding, which levers and buttons we want to push. 
+We can imagine this system as follows. The first part of the right side, $Ax(t)$, of the equation $\dot{x}(t)=Ax(t)+Bu(t)$ can be thought of as the model of machine or event that we want to control and the second part, $Bu(t)$, as our control mechanism. The $B$ matrix is our ``control board'' and the control vector $u(t)$ is us deciding, which levers and buttons we want to push. 
 
-Of course, if we want this system to be self-regulating, we cannot input our own values into $u(t)$ and therefore it has to be calculated from the current state of our system.
+Of course, if we want this system to be self-regulating, we cannot input our own values into $u(t)$, and therefore it has to be calculated from the current state of our system.
 
 \begin{definition}
 	Let us have linear differential system with control $u(t)$ defined as follows $$u(t)=Fx(t)$$ where $F\in\C^{m\times n}$ is a \termdef{feedback matrix}. This system is then called a \termdef{closed-loop control} system or a \termdef{linear feedback control} system.
@@ -265,21 +268,21 @@ Of course, if we want this system to be self-regulating, we cannot input our own
 
 Typically, we require a feedback control system to stabilize itself back into its stable state after some disturbances. This means that we require that the system converges to some fixed point. In many practical applications we require that this point is the origin of our state space, i.e., all the possible states of $x(t)$.
 
-The feedback control system can be expressed as a first order linear differential system $$\dot{x}(t)=Ax(t)+BFx(t)=(A+BF)x(t)$$ TODO As discussed in the first section, we now know that the system converges to $\nullvector$ if all of the eigenvalues of matrix $A+BF$ are negative in their real parts. 
+The feedback control system can be expressed as a first order linear differential system $$\dot{x}(t)=Ax(t)+BFx(t)=(A+BF)x(t)$$ TODO As discussed in the first section, we now know that the system converges to $\nullvector$ if all of the eigenvalues of matrix $A+BF$ have negative real parts. 
 
-Therefore the system can stabilize itself if we find such matrix $F \in \C^{n \times n}$ that $A+BF$ have all eigenvalues with negative real part. This requirement can be expressed through characteristic polynomial of matrix $A+BF$.
+Therefore, the system can stabilize itself if we find such matrix $F \in \C^{n \times n}$ that all the eigenvalues of the matrix $A+BF$ have negative real parts. This requirement can be expressed through characteristic polynomial of the matrix $A+BF$, since roots of characteristic polynomial of a matrix are precisely the eigenvalues of said matrix.
 
 \begin{definition}
 	Let $A$ be a $n\times n$ matrix. Then the \termdef{characteristic polynomial} of A, denoted by $\chi_A$, is defined as $$\chi_A(s)=\textnormal{det}(sI_n-A)$$
 \end{definition}
 
-Through our observations we got to a conclusion that we need to satisfy $$\chi_{A+BF}=(x-\lambda_1)(x-\lambda_2)\cdots(x-\lambda_n)$$ where $\lambda_1,\lambda_2,\ldots,\lambda_n \in \C$ have their real parts negative. This leads to an important definition.
+Through our observations we got to a conclusion, that through our choice of the feedback matrix $F$ we need to satisfy the condition $$\chi_{A+BF}=(x-\lambda_1)(x-\lambda_2)\cdots(x-\lambda_n)$$ where $\lambda_1,\lambda_2,\ldots,\lambda_n \in \C$ have negative real parts. This leads to an important definition.
 
 \begin{definition}
     Let $\K$ be a field and let $A \in \K^{n \times n}$, $B \in \K^{n \times m}$, $n,m \in \N$. We say that polynomial $\chi$ is \termdef{assignable} for the pair $(A,B)$ if there exists such matrix $F\in\K^{m \times n}$ that $$\chi_{A+BF}=\chi$$
 \end{definition}
 
-The pole shifting theorem states, that if $A$ and $B$ are ``sensible'' in a sense that we will discuss in the next section, then arbitrary polynomial $\chi$ of dimension that depends on how ``sensible'' $A$ and $B$ are, can be assigned to the pair $(A,B)$. It also claims that it is immaterial over what field $A$ and $B$ are.
+The pole shifting theorem states, that if $A$ and $B$ are ``sensible'' in a sense that we will discuss in the next section, then arbitrary polynomial $\chi$ of degree that depends on how ``sensible'' $A$ and $B$ are, can be assigned to the pair $(A,B)$. It also claims that it is immaterial over what field $A$ and $B$ are.
 
 \section{Controllable pairs}
 
@@ -293,18 +296,18 @@ TODO definicia diskretneho systemu, stavov a reach
 	
 \end{definition}
 
-States that we can reach in set number of iterations in a open-loop control \textit{discrete-time systems} can be derived as follows. From state $x_k$ and control vector $u_k$ is the next state $x_{k+1}$ computed by equation $$x_{k+1}=Ax_k+Bu_k$$ where $\K$ is a field, $A\in\K^{n\times n}$ and $B\in\K^{n\times m}$. The starting condition is $x_0=\textbf{o}$ and we can choose arbitrary $u_k$. Then, for $k=0$ we have $$x_1=Ax_0+Bu_0=Bu_0 \in \text{Im}B.$$ For $k=1$ we get $$x_2=Ax_1+Bu_1=ABu_0+Bu_1\in\text(AB|B).$$ It is clear, that $$x_k\in\text{Im}(A^{k-1}B|\ldots|AB|B).$$ We can observe that $\text{Im}(B|AB|\ldots|A^kB) \subseteq \text{Im}(B|AB|\ldots|A^{k+1}B)$. From Cayley-Hamilton theorem we know that $\chi_A(A)=O_{n\times n}$. That means that $A^n$ can be expressed as linear combination of matrices $\{I,A,\ldots,A^{n-1}\}$ or equivalently that $A^nB$ can be expressed as linear combination of matrices $\{B,AB,\ldots,A^{n-1}B\}$. We now see that $$\text{Im}(B|AB|\ldots|A^{n-1}B)=\text{Im}(B|AB|\ldots|A^{n-1}B|A^nB).$$ Therefore all the states we could ever reach are already in space $$\text{Im}(B|AB|\ldots|A^{n-1}B)$$
+States that we can reach in set number of iterations in a open-loop control \textit{discrete-time systems} can be derived as follows. From state $x_k$ and control vector $u_k$ is the next state $x_{k+1}$ computed by equation $$x_{k+1}=Ax_k+Bu_k$$ where $\K$ is a field, $A\in\K^{n\times n}$ and $B\in\K^{n\times m}$. The starting condition is $x_0=\textbf{o}$ and we can choose an arbitrary $u_k$. Then, for $k=0$ we have $$x_1=Ax_0+Bu_0=Bu_0 \in \text{Im}B.$$ For $k=1$ we get $$x_2=Ax_1+Bu_1=ABu_0+Bu_1\in\text(AB|B).$$ It is clear, that $$x_k\in\text{Im}(A^{k-1}B|\ldots|AB|B).$$ We can observe that $\text{Im}(B|AB|\ldots|A^kB) \subseteq \text{Im}(B|AB|\ldots|A^{k+1}B)$. From Cayley-Hamilton theorem we know that $\chi_A(A)=O_{n\times n}$. That means that $A^n$ can be expressed as linear combination of matrices $\{I,A,\ldots,A^{n-1}\}$ or equivalently that $A^nB$ can be expressed as linear combination of matrices $\{B,AB,\ldots,A^{n-1}B\}$. We now see that $\text{Im}(B|AB|\ldots|A^kB) \supseteq \text{Im}(B|AB|\ldots|A^{k+1}B)$ holds. I t follows $$\text{Im}(B|AB|\ldots|A^{n-1}B)=\text{Im}(B|AB|\ldots|A^{n-1}B|A^nB).$$ Therefore, all the states we could ever reach are already in space $$\text{Im}(B|AB|\ldots|A^{n-1}B)$$
 
 \begin{definition}
 	Let $\K$ be a field and let $A \in \K^{n \times n}$, $B \in \K^{n \times m}$, $n,m \in \N$. We define \termdef{reachable space} $\mathcal{R}(A,B)$ of the pair $(A,B)$ as $\text{Im}(B|AB|\ldots|A^{n-1}B)$.
 \end{definition}
 
-We have seen that by left multiplying $\mathcal{R}(A,B)$ by $A$ we get the same subspace. This leads to an important property of some subspaces.
+We have seen that by left multiplying $\mathcal{R}(A,B)$ by $A$, we get the same subspace. This leads to an important property of some subspaces.
 
 \begin{definition}
 	Let $V$ be a vector space, $W$ be its subspace and $f$ be a mapping from $V$ to $V$. We call $W$ an \termdef{invariant subspace} of $f$ if $f(W)\subseteq W$.
 
-	We also say that $W$ is \termdef{$f$-invariant}. When $f=f_A$ for some matrix $A$ we also shortly say that W is \termdef{$A$-invariant}.
+	We also say that $W$ is \termdef{$f$-invariant}. When $f=f_A$ for some matrix $A$, we also shortly say that W is \termdef{$A$-invariant}.
 \end{definition}
 
 \begin{remark}
@@ -312,13 +315,17 @@ We have seen that by left multiplying $\mathcal{R}(A,B)$ by $A$ we get the same 
 	$\mathcal{R}(A,B)$ is a $A$-invariant subspace.
 \end{remark} 
 
-The maximum dimension of $\mathcal{R}(A,B)$ is, of course, $n$. This leads us to important property of pair $(A,B)$, where we want to able to get the ``machine'' into any state in state space by controlling it with our control matrix $B$. Therefore we desire that $\mathcal{R}(A,B)=\K^n$. The equivalent condition is $\text{dim}\mathcal{R}(A,B)=n$.
+The maximum dimension of $\mathcal{R}(A,B)$ is, of course, $n$. This leads us to important property of pair $(A,B)$, where we want to able to get the system into any state in state space by controlling it with our control vector $u(t)$, i.e., choosing appropriate $u(t)$. Therefore, we desire that $\mathcal{R}(A,B)=\K^n$. The equivalent condition is $\text{dim}\mathcal{R}(A,B)=n$.
 
 \begin{definition}
 	Let $\K$ be a field and let $A \in \K^{n \times n}$, $B \in \K^{n \times m}$, $n,m \in \N$. The pair $(A,B)$ is \termdef{controllable} if $\textnormal{dim}\mathcal{R}(A,B)=n$.
 \end{definition}
 
 \subsection{Continuous-time systems}
+
+\begin{remark}
+	In this section we assume, that $\K$ is a field of either real or complex numbers and that $A\in\K^{n\times n}$, $B\in\K^{n\times m}$.
+\end{remark}
 
 We will now show that the condition for \textit{discrete-time systems} also characterizes \textit{continuous-time systems}. For this we have to express solution of such system using matrices $A^iB$ for $i\in \N_0$. 
 
@@ -327,7 +334,7 @@ We utilize matrix exponential in solving system of inhomogeneous linear system $
 	e^{-tA}\dot{x}(t)-e^{-tA}Ax(t) &=e^{-tA}Bu(t) \\
 	\frac{d}{dt} (e^{-tA}x(t)) &=e^{-tA}Bu(t) 
 \end{align*}
-Note, we used $-AA=A(-A)\Rightarrow e^{-tA}A=Ae^{-tA}$. After integrating both sides with respect to $t$ on interval $(t_0,t_1)$ we have 
+Note, we used $-AA=A(-A)\Rightarrow e^{-tA}A=Ae^{-tA}$ from Lemma \ref{lem:expprop}. After integrating both sides with respect to $t$ on interval $(t_0,t_1)$ we have 
 \begin{align*}
 	[e^{-tA}x(t)]^{t_1}_{t_0}&=\int^{t_1}_{t_0}e^{-tA}Bu(t)dt \\
 	e^{-t_1A}x(t_1)-e^{-t_0A}x(t_0)&=\int^{t_1}_{t_0}e^{-tA}Bu(t)dt \\
@@ -346,21 +353,23 @@ Now it is clear that in system where $x(0)=\nullvector$ can every state in time 
 		x(t)=\int^t_0e^{(t-s)A}Bu(s)ds
 		=\int^t_0\sum^\infty_{k=0}\frac{(t-s)^k}{k!}A^kBu(s)ds
 	$$
-	The $n$-dimensional vector $w^{(k)}(s)=A^kBu(s)$ has elements $$w^{(k)}_i(s)=\sum^m_{j=1}\alpha^{(k)}_{i,j}u_j(s)$$ where $\alpha^{(k)}_{i,j}$ is the element of the matrix $A^kB$ on the position $(i,j)$. Therefore, the elements of $x(t)$ are of the form
+	The $n$-dimensional vector $w^{(k)}(s)=A^kBu(s)$ has elements $$w^{(k)}_i(s)=\sum^m_{j=1}\alpha^{(k)}_{i,j}u_j(s)$$ where $\alpha^{(k)}_{i,j}$ is the element of the matrix $A^kB$ on the position $(i,j)$. Therefore, the elements of $x(t)$ are
 	$$
-		x_i(t)=\int^t_0\sum^\infty_{k=0}\sum^m_{j=1}\frac{(t-s)^k}{k!}\alpha^{(k)}_{i,j}u_j(s)ds
+		x_i(t)
+		=\int^t_0\sum^\infty_{k=0}\frac{(t-s)^k}{k!}w^{(k)}_ids
+		=\int^t_0\sum^\infty_{k=0}\sum^m_{j=1}\frac{(t-s)^k}{k!}\alpha^{(k)}_{i,j}u_j(s)ds
 	$$
 	
-	We can swap the sums and then the integral because $\sum^\infty_{k=0}\frac{(t-s)^k}{k!}\alpha^{(k)}_{i,j}u_j(s)$ are convergent for every pair $i$, $j$. To show this, let us first remind that $\abs*{a^{(k)}_{i,j}}\leq\abs{\rho n}^{k+1}$ for some fixed real number $\rho$. Then
+	Now, in order to be able to modify this expression, we will prove that the series $\sum^\infty_{k=0}\frac{(t-s)^k}{k!}\alpha^{(k)}_{i,j}u_j(s)$ are convergent for every position $(i, j)$. To show this, we will use the estimate from Lemma \ref{lem:elementAbsoluteSize}, that is, $\abs*{\alpha_{i,j}^{(k)}}\leq\norm{A^kB}_F\leq\norm{A}^k_F\norm{B}_F$. Then
 	\begin{align*}
 		&\abs{\sum^\infty_{k=0}\frac{(t-s)^k}{k!}\alpha^{(k)}_{i,j}u_j(s)}
-		\leq\sum^\infty_{k=0}\frac{(t-s)^k}{k!}\abs{\alpha^{(k)}_{i,j}}\abs{u_j(s)}\leq
+		\leq\sum^\infty_{k=0}\frac{\abs{t-s}^k}{k!}\abs*{\alpha^{(k)}_{i,j}}\abs{u_j(s)}\leq
 		\\
-		\leq&\sum^\infty_{k=0}\frac{\abs{(t-s)\rho n}^k}{k!}\abs{\rho n}\abs{u_j(s)}
-		=\abs{\rho n}\abs{u_j(s)}\sum^\infty_{k=0}\frac{\abs{(t-s)\rho n}^k}{k!}
-		=\abs{\rho n}\abs{u_j(s)}e^{\abs{(t-s)\rho n}}
+		\leq&\sum^\infty_{k=0}\frac{\norm{(t-s)A}_F^k}{k!}\norm{B}_F\abs{u_j(s)}
+		=\norm{B}_F\abs{u_j(s)}\sum^\infty_{k=0}\frac{\norm{(t-s)A}_F^k}{k!}
+		=\norm{B}_F\abs{u_j(s)}e^{\norm{(t-s)A}_F}
 	\end{align*}
-	Thanks to the convergence we can also now swap integral and the series.
+	Because of the the convergence, we can now swap the integral and the series.
 	\begin{align*}
 		x_i(t)
 		&=\int^t_0\sum^\infty_{k=0}\sum^m_{j=1}\frac{(t-s)^k}{k!}\alpha^{(k)}_{i,j}u_j(s)ds
@@ -374,10 +383,11 @@ Now it is clear that in system where $x(0)=\nullvector$ can every state in time 
 		\\
 		&=\sum^\infty_{k=0}\sum^m_{j=1}\alpha^{(k)}_{i,j}v^{(k)}_i(t)
 	\end{align*}
-	where $v^{(k)}(t)=\int^t_0\frac{(t-s)^k}{k!}u(s)ds$ is a vector of length $m$. Therefore, we have $$x(t)=\sum^\infty_{k=0}A^kB\int^t_0\frac{(t-s)^k}{k!}u(s)ds=\sum^\infty_{k=0}A^kBv_k(t)$$
+	where $v^{(k)}(t)=\int^t_0\frac{(t-s)^k}{k!}u(s)ds$ is a vector of length $m$. Therefore, we have 
+	$$x(t)=\sum^\infty_{k=0}A^kBv_k(t)=\sum^\infty_{k=0}A^kB\int^t_0\frac{(t-s)^k}{k!}u(s)ds$$
 	Now it its clear that $$x(t) \in \text{Im}(B|AB|\ldots|A^kB|\ldots)\subseteq \text{Im}(B|AB|\ldots|A^{n-1}B)=\mathcal{R}(A,B)$$ 
 	
-	If the system is controllable then $x(t)$ can be equal to any of the vectors of an arbitrary basis of $\K^n$. Therefore we know that $n$ linearly independent vectors belong into $\mathcal{R}(A,B)$ and naturally it follows $\text{dim}\mathcal{R}(A,B)=n$.
+	If the system is controllable then $x(t)$ can be equal to any of the vectors of an arbitrary basis of $\K^n$. Therefore, we know that $n$ linearly independent vectors belong into $\mathcal{R}(A,B)$, and naturally it follows $\text{dim}\mathcal{R}(A,B)=n$.
 
 	Conversely, if dimension of reachable space is equal to $n$ we then have $x(t)\in\mathcal{R}(A,B)=\C^n$, therefore the system is controllable.
 \end{proof}
@@ -398,10 +408,10 @@ Now it is clear that in system where $x(0)=\nullvector$ can every state in time 
 \end{lemma}
 
 \begin{proof}
-	Let $(w_1,\ldots,w_r)$ be an arbitrary basis of subspace $W$. We complete this sequence into basis $C$ of $V$ with vectors $v_1,\ldots,v_{n-r}$ where $n=\text{dim}V$, thus $C=(w_1,\ldots,w_r,v_1,\ldots,v_{n-r})$. We know that $$[f]^C_C=([f(w_1)]_C,\ldots,[f(w_r)]_C,[f(v_1)]_C,\ldots,[f(v_{n-r})]_C)$$ Since $W$ is $A$-invariant subspace, it holds that $f(w_i)\in W$ and therefore, thanks to our choice of the basis $C$, we get the desired form.
+	Let $(w_1,\ldots,w_r)$ be an arbitrary basis of subspace $W$. We complete this sequence into basis $C$ of $V$ with vectors $v_1,\ldots,v_{n-r}$ where $n=\text{dim}V$, thus $C=(w_1,\ldots,w_r,v_1,\ldots,v_{n-r})$. We know that $$[f]^C_C=([f(w_1)]_C,\ldots,[f(w_r)]_C,[f(v_1)]_C,\ldots,[f(v_{n-r})]_C)$$ Since $W$ is an $A$-invariant subspace, it holds that $f(w_i)\in W$ and therefore, because of our choice of the basis $C$, the matrix $[f]^C_C$ is of the desired form.
 \end{proof}
 
-If $(A,B)$ are not controllable then there exists subspace of our state space that is not affected by our input. This can be shown using following theorem.
+If $(A,B)$ is not controllable, then there exists subspace of our state space that is not affected by our input. This can be shown using following theorem.
 
 \begin{theorem}
 	\label{theorem:decomp}
@@ -423,23 +433,29 @@ If $(A,B)$ are not controllable then there exists subspace of our state space th
 \end{theorem}
 
 \begin{proof}
-	We know that $\mathcal{R}(A,B)$ is $A$-invariant subspace (Remark \ref{rem:reachinv}). Using Lemma \ref{lem:invsubspc} on matrix mapping $f_A$ we get a basis $C$ for which it holds $$[f_A]^C_C=[\text{id}]^K_C[f_A]^K_K[\text{id}]^C_K=[\text{id}]^K_CA[\text{id}]^C_K$$ is in a block triangular form. By putting $T=[\text{id}]^C_K=C$ we get $\widetilde{A}=[f_A]^C_C$ which is in the desired form.
+	We know that $\mathcal{R}(A,B)$ is an $A$-invariant subspace (Remark \ref{rem:reachinv}). Using Lemma \ref{lem:invsubspc} on the matrix mapping $f_A$ we get a basis $C$ for which it holds that 
+	$$[f_A]^C_C=[\text{id}]^K_C[f_A]^K_K[\text{id}]^C_K=[\text{id}]^K_CA[\text{id}]^C_K$$ 
+	is in a block triangular form. By putting $T=[\text{id}]^C_K=C$ we get that $\widetilde{A}=[f_A]^C_C$ is now in the desired form.
 
-	Consider now matrix mapping $f_B$. We have $$\widetilde{B}=TB=[\text{id}]^{K_n}_C[f_B]^{K_m}_{K_n}=[f_B]^{K_m}_C=([f_B(e_1)]_C,\ldots,[f_B(e_m)]_C)$$ Since $f_B(e_i)$ is $i$-th column of matrix $B$ and trivially from definition it holds $\text{Im}(B)\subseteq \mathcal{R}(A,B)$ we get the desired form of $\widetilde{B}$.
+	Consider now matrix mapping $f_B$. We have $$\widetilde{B}=TB=[\text{id}]^{K_n}_C[f_B]^{K_m}_{K_n}=[f_B]^{K_m}_C=([f_B(e_1)]_C,\ldots,[f_B(e_m)]_C)$$ Since $f_B(e_i)$ is $i$-th column of matrix $B$ and trivially from definition of reachable space it holds $\text{Im}(B)\subseteq \mathcal{R}(A,B)$, we see that $\widetilde{B}$ is in the requested form.
 \end{proof}
 
 We achieved the new form of matrices $A$ and $B$ by changing the basis of our state space. We now define the relation between $(A,B)$ and $(\widetilde{A},\widetilde{B}).$
 
 \begin{definition}
-	Let $(A,B)$ and $(\widetilde{A},\widetilde{B})$ be pairs as in Theorem \ref{theorem:decomp} above. Then $(A,B)$ \termdef{is similar to} $(\widetilde{A},\widetilde{B})$, denoted $$(A,B) \sim (\widetilde{A},\widetilde{B})$$ if there exists invertible matrix $T$ for which it holds that $$\widetilde{A}=T^{-1}AT\quad and\quad\widetilde{B}=T^{-1}B$$
+	Let $(A,B)$ and $(\widetilde{A},\widetilde{B})$ be pairs as in Theorem \ref{theorem:decomp} above. Then $(A,B)$ \termdef{is similar to} $(\widetilde{A},\widetilde{B})$, denoted $(A,B) \sim (\widetilde{A},\widetilde{B})$, if there exists an invertible matrix $T$ for which it holds that $$\widetilde{A}=T^{-1}AT\quad and\quad\widetilde{B}=T^{-1}B$$
 \end{definition}
 
-We can interpret the decomposition as follows. Consider our system $\dot{x}(t)=Ax(t)+Bu(t)$. By changing the basis by putting $x(t)=Ty(t)$ we get $$T\dot{y}(t)=ATy(t)+Bu(t)$$ which we can write as $$\dot{y}(t)=T^{-1}ATy(t)+T^{-1}Bu(t)=\widetilde{A}y(t)+\widetilde{B}u(T)$$ Which gives us 
+We can interpret the decomposition as follows. Consider our system $\dot{x}(t)=Ax(t)+Bu(t)$. By changing the basis by putting $x(t)=Ty(t)$ we get 
+$$T\dot{y}(t)=ATy(t)+Bu(t)$$ 
+which we can write as 
+$$\dot{y}(t)=T^{-1}ATy(t)+T^{-1}Bu(t)=\widetilde{A}y(t)+\widetilde{B}u(t)$$ 
+Which gives us 
 \begin{alignat*}{2}
 	\dot{y}_1(t)&=A_1y_1(t)+&A_2y_2(t)&+B_1u_1(t) \\
 	\dot{y}_2(t)&=&A_3y_2(t)&
 \end{alignat*}
-where $y_1(t)$ is composed of the first $r$ elements of $y(t)$, $y_2(t)$ is composed of the other $n-r$ elements of $y(t)$ and $u_1(t)$ is composed of the first $r$ elements of $u(t)$. Since $\dot{y}_2(t)$ does not depend on control vector we cannot change these last $n-r$ coordinates of $y(t)$.
+where the vector $y_1(t)$ is composed of the first $r$ elements of the vector $y(t)$, $y_2(t)$ is composed of the last $n-r$ elements of $y(t)$ and the vector $u_1(t)$ is composed of the first $r$ elements of the vector $u(t)$. Since $\dot{y}_2(t)$ does not depend on the control vector $u(t)$, we see that we cannot change the last $n-r$ coordinates of $y(t)$ by changing the vector $u(t)$.
 
 It is also true that $(A_1,B_1)$ from Theorem \ref{theorem:decomp} is a controllable pair which we will state in a lemma.
 
@@ -527,13 +543,13 @@ We also see that
 	&=(\text{det}T)^{-1}\text{det}(sI-A)\text{det}T=\text{det}(sI-A) \\
 	&=\chi_A
 \end{align*}
-therefore it holds $$\chi_A=\chi_{A_1}\chi_{A_3}$$ 
+therefore, it holds $$\chi_A=\chi_{A_1}\chi_{A_3}$$ 
 
 \begin{definition}
 	The characteristic polynomial of matrix $A$ splits into \termdef{controllable} and \termdef{uncontrollable parts} with respect to pair $(A,B)$ which we denote by $\chi_c$ and $\chi_u$ respectively. We define these polynomials as $$\chi_c=\chi_{A_1} \qquad \chi_u=\chi_{A_3}$$ In case $r=0$ we put $\chi_c=1$ and in case $r=n$ we put $\chi_u=1$.
 \end{definition}
 
-For this definition to be correct we need to show that polynomials $\chi_{A_1}$ and $\chi_{A_3}$ are not dependent on the choice of basis on $\mathcal{R}(A,B)$. Since $\chi_{A_3}=\chi_A/\chi_{A_1}$, it is enough to show that $\chi_{A_1}$ is independent of the choice.
+For this definition to be correct, we need to show that polynomials $\chi_{A_1}$ and $\chi_{A_3}$ are not dependent on the choice of a basis on $\mathcal{R}(A,B)$. Since $\chi_{A_3}=\chi_A/\chi_{A_1}$, it is enough to show that $\chi_{A_1}$ is independent of the choice.
 
 \begin{lemma}
 	$\chi_c$ is independent of the choice of basis on $\mathcal{R}(A,B)$.
