first 8 pages complete, add few TODO

--- a/macros.tex
+++ b/macros.tex
@@ -5,7 +5,7 @@
 \newcommand{\K}{\mathbb{K}}
 \newcommand{\powerset}[1]{\mathcal{P} ( #1 )}   
 \newcommand{\termdef}[1]{\textnormal{\textbf{#1}}}
-\newcommand{\nullvector}{\textbf{o}}
+\newcommand{\nullvector}{\textit{o}}
 
 \DeclarePairedDelimiter\abs{\lvert}{\rvert}%
 \DeclarePairedDelimiter\norm{\lVert}{\rVert}%
