--- a/chap1.tex
+++ b/chap1.tex
@@ -4,33 +4,37 @@
 \section{Basics}
 \label{sec:basics}
 
-Pole shifting theorem is one of the basic results of the theory of linear dynamical systems with linear feedback. It claims that in case of controllable systems one can achieve an arbitrary asymptotic behavior. To understand this crucial theorem, we must first describe few basic concepts.
+Pole shifting theorem is one of the basic results of the theory of linear dynamical systems with linear feedback. It claims that in case of controllable systems one can achieve an arbitrary asymptotic behavior by a suitably chosen feedback. To understand this crucial theorem, we must first describe few basic concepts.
 
 \subsection{Systems of First Order Differential Equations}
+
+\begin{remark}
+	Let $f(t)$ be a function of time $t\in\R^+$. We will denote its derivative with repoect to $t$ by $$\dot{f}(t)=\frac{d}{dt}f(t)\ .$$
+\end{remark}
 
 \begin{definition}
 	A \termdef{system of linear differential equations of order of one with constant coefficients} is a system 
 	\begin{align*}
 		\dot{x}_1(t)&=a_{1,1}x_1(t)+\ldots+a_{1,n}x_n(t) \\
 		&\vdotswithin{=} \\
-		\dot{x}_n(t)&=a_{n,1}x_1(t)+\ldots+a_{n,n}x_n(t) 
+		\dot{x}_n(t)&=a_{n,1}x_1(t)+\ldots+a_{n,n}x_n(t)\ .
 	\end{align*}
-	The system can be written in a matrix form $$\dot{x}(t)=Ax(t)$$ where $x(t)=(x_1(t),\ldots,x_n(t))^T \in \C^n$ is a \termdef{state vector} (shortly state) of the system. The matrix $A\in \C^{n\times n}$, $A=(a_{i,j})$ is a \termdef{fundamental matrix} of the system. The \termdef{starting condition} of the system is the state $x(0)$.
+	The system can be written in a matrix form $$\dot{x}(t)=Ax(t)\ ,$$ where $x(t)=(x_1(t),\ldots,x_n(t))^T \in \C^n$ is a \termdef{state vector} (shortly \termdef{state}) of the system. The matrix $A\in \C^{n\times n}$, $A=(a_{i,j})$ is a \termdef{fundamental matrix} of the system. The \termdef{initial condition} of the system is the state $x(0)$.
 \end{definition}
 
-We will use the matrix representation as it is a very compact way of describing the system.
+We will use the matrix form, as it is a very compact way of describing the system.
 
-To express solution of this system in similarly compact matter we will establish a notion of a matrix exponential.
+To express solution of this system in similarly compact matter we will establish the notion of a matrix exponential.
 
 \begin{definition}
-	Let $X$ be a real or complex square matrix. The exponential of $X$, denoted by $e^X$, is the square matrix of the same type given by the series $$e^{X}=\sum _{k=0}^{\infty}\frac{1}{k!}X^{k}$$
+	Let $X$ be a real or complex square matrix. The exponential of $X$, denoted by $e^X$, is the square matrix of the same type defined by the series $$e^{X}=\sum _{k=0}^{\infty}\frac{1}{k!}X^{k}\ ,$$
 	where $X^0$ is defined to be the identity matrix $I$ of the same type as $X$.
 \end{definition}
 
-For this definition to be valid, we need to show that the series converges for any real or complex square matrix. Firstly, we will define what does it mean for matrix to converge. In this text, will be using Frobenius norm to describe the notion of matrix convergence, but it is possible to use any matrix norm which satisfies a set of properties discussed in the next lemma.
+For this definition to be valid, we need to show that the series converges for any real or complex square matrix. Firstly, we will define what does it mean for a matrix series to converge. In this text, we will be using Frobenius norm to describe the notion of the convergence of a matrix series.
 
 \begin{definition}
-	\termdef{Frobenius norm} is a matrix norm, denoted by $\norm{\cdot}_F$, which for an arbitrary $n \times m$ matrix $A$ is defined as $$\norm{A}_F=\sqrt{\sum^n_{i=1}\sum^m_{j=1}\abs{a_{i,j}}^2}$$
+	\termdef{Frobenius norm} is a matrix norm, denoted by $\norm{\cdot}_F$, which for an arbitrary $n \times m$ matrix $A$ is defined as $$\norm{A}_F=\sqrt{\sum^n_{i=1}\sum^m_{j=1}\abs{a_{i,j}}^2}\ .$$
 \end{definition}
 
 \begin{remark}
@@ -40,12 +44,12 @@ For this definition to be valid, we need to show that the series converges for a
 \begin{lemma}
 \label{lem:frobNormProperties}
 	Then Frobenius norm satisfies following statements for any matrices $A$, $B$, $C\in \K^{n \times m}$, $D\in\K^{m\times o}$ and any scalar $\alpha \in \K$.
-	\begin{itemize}
-		\item $\norm{A+B}_F\leq\norm{A}_F+\norm{B}_F$
-		\item $\norm{\alpha A}_F=\abs{\alpha}\norm{A}_F$
-		\item $\norm{A}_F\geq 0$ with equality occurring if and only if $A=O_{n \times m}$
-		\item $\norm{CD}_F\leq\norm{C}_F\norm{D}_F$
-	\end{itemize}
+	\begin{enumerate}
+		\item $\norm{A+B}_F\leq\norm{A}_F+\norm{B}_F\ ,$
+		\item $\norm{\alpha A}_F=\abs{\alpha}\norm{A}_F\ ,$
+		\item $\norm{A}_F\geq 0$ with equality occurring if and only if $A=O_{n \times m}\ ,$
+		\item $\norm{CD}_F\leq\norm{C}_F\norm{D}_F\ .$
+	\end{enumerate}
 \end{lemma}
 
 \begin{proof}
@@ -58,63 +62,69 @@ For this definition to be valid, we need to show that the series converges for a
 \end{lemma}
 
 \begin{proof}
-	For non-negative real numbers $a$, $b$ it holds $a\leq\sqrt{a^2+b}$. Therefore, for arbitrary element of the matrix $X=(x_{i,j})$ we can write $$\abs*{x_{i,j}}\leq \sqrt{\sum^n_{i=1}\sum^m_{j=1}\abs*{x_{i,j}}^2}=\norm{X}_F$$ It follows $$\abs*{a_{i,j}^{(k)}}\leq\norm{A^k}_F\leq\norm{A}^k_F$$
+	For non-negative real numbers $a$, $b$ it holds $a\leq\sqrt{a^2+b}$. Therefore, for arbitrary element of the matrix $X=(x_{i,j})$ we can write $$\abs*{x_{i,j}}\leq \sqrt{\sum^n_{i=1}\sum^m_{j=1}\abs*{x_{i,j}}^2}=\norm{X}_F\ .$$ It follows 
+	$$\abs*{a_{i,j}^{(k)}}\leq\norm*{A^k}_F\leq\norm{A}^k_F\ ,$$
+	where second inequality follows from Lemma \ref{lem:frobNormProperties}.4.
 \end{proof}
 
 \begin{definition}
-	A matrix sequence $\{A_k\}_{k=0}^\infty$ of $n \times m$ matrices is said to \termdef{converge} to $n\times m$ matrix $A$, denoted by $A_k\longrightarrow A$, if $$\forall\varepsilon\in\R, \varepsilon>0\quad\exists n_0\in\N\quad\forall n\in\N,n\geq n_0:||A_n-A||_F<\varepsilon$$
+	A matrix sequence $\{A_k\}_{k=0}^\infty$ of $n \times m$ matrices is said to \termdef{converge} to $n\times m$ matrix $A$, denoted by $A_k\longrightarrow A$, if $$\forall\varepsilon\in\R, \varepsilon>0\quad\exists n_0\in\N\quad\forall n\in\N,n\geq n_0:||A_n-A||_F<\varepsilon\ .$$
 \end{definition}
 
 \begin{lemma}
 \label{lem:elementwiseConvergence}
-	A matrix sequence $\{A_k=(a^{(k)}_{i,j})\}_{k=0}^\infty$ of $n\times m$ matrices converges to a matrix $A$ if and only if it converges elementwise, in other words $$\forall i\in\{1,\ldots,n\}\quad\forall j\in\{1,\ldots,m\} : a^{(k)}_{i,j}\xrightarrow{k\rightarrow\infty}a_{i,j}$$
+	A matrix sequence $\{A_k=(a^{(k)}_{i,j})\}_{k=0}^\infty$ of $n\times m$ matrices converges to a matrix $A$ if and only if it converges elementwise, in other words $$\forall i\in\{1,\ldots,n\}\quad\forall j\in\{1,\ldots,m\} : a^{(k)}_{i,j}\xrightarrow{k\rightarrow\infty}a_{i,j}\ .$$
 \end{lemma}
 
 \begin{proof}
-	Let $A_k \rightarrow A$. Then we can for any $\varepsilon>0$ find such $n_0$ that $\norm{A_n-A}_F<\varepsilon$ for every $n\geq n_0$. Using Lemma \ref{lem:elementAbsoluteSize} we can write $$\abs*{a^{(n)}_{i,j}-a_{i,j}}\leq \norm{A_n-A}_F<\varepsilon$$ It follows that $\{A_k\}_{k=0}^\infty$ converges to $A$ elementwise.
+	Let $A_k \rightarrow A$. Then we can for any $\varepsilon>0$ find such $n_0$ that $\norm{A_n-A}_F<\varepsilon$ for every $n\geq n_0$. Using Lemma \ref{lem:elementAbsoluteSize} we can write $$\abs*{a^{(n)}_{i,j}-a_{i,j}}\leq \norm{A_n-A}_F<\varepsilon\ .$$ It follows that $\{A_k\}_{k=0}^\infty$ converges to $A$ elementwise.
 
-	Conversely, let $\varepsilon$ be a positive real number. For every position $(i,j)$ we find such $n_{i,j}$ that $$\forall n\geq n_{i,j}:\abs*{a^{(n)}_{i,j}-a_{i,j}}<\frac{\varepsilon}{\sqrt{nm}}$$ We put $N_0=\text{min}\{n_{i,j}\}$. Now $\forall n\in\N, n\geq N_0$ we have $$||A_n-A||_F=\sqrt{\sum^n_{i=1}\sum^m_{j=1}|a^{(n)}_{i,j}-a_{i,j}|^2}<\sqrt{nm\frac{\varepsilon^2}{nm}}=\varepsilon$$
+	Conversely, let $\varepsilon$ be a positive real number. For every position $(i,j)$ we find such $n_{i,j}$ that $$\forall n\geq n_{i,j}:\abs*{a^{(n)}_{i,j}-a_{i,j}}<\frac{\varepsilon}{\sqrt{nm}}\ .$$ We put $N_0=\text{min}\{n_{i,j}\}$. Now $\forall n\in\N, n\geq N_0$ we have $$||A_n-A||_F=\sqrt{\sum^n_{i=1}\sum^m_{j=1}|a^{(n)}_{i,j}-a_{i,j}|^2}<\sqrt{nm\frac{\varepsilon^2}{nm}}=\varepsilon\ .$$
 \end{proof}
 
 \begin{lemma}
-	Let $\{A_k\}_{k=0}^\infty$ be a sequence of matrices over $\K$. This sequence converges if and only if it is a \termdef{Cauchy sequence}, that is when the following condition is satisfied $$\forall\varepsilon\in\R, \varepsilon>0\quad\exists n_0\in\N\quad\forall m,n\in\N,m\geq n_0, n\geq n_0:||A_n-A_m||_F<\varepsilon$$
+	Let $\{A_k\}_{k=0}^\infty$ be a sequence of matrices over $\K$. This sequence converges if and only if it is a \termdef{Cauchy sequence}, that is when the following condition is satisfied $$\forall\varepsilon\in\R, \varepsilon>0\quad\exists n_0\in\N\quad\forall m,n\in\N,m\geq n_0, n\geq n_0:||A_n-A_m||_F<\varepsilon\ .$$
 \end{lemma}
 
 \begin{proof}
 	By Lemma \ref{lem:elementwiseConvergence} the sequence converges if and only if it also converges elementwise. This happens if and only if all the sequences of elements are Cauchy what occurs if and only if the matrix sequence itself is Cauchy. The proof of the last equivalence is similar to the proof of Lemma \ref{lem:elementwiseConvergence}.
+	TODO
 \end{proof}
 
 \begin{lemma}
 \label{lem:matrixSeriesFactoring}
-	Let $\{A_k\}_{k=0}^\infty$ be a matrix sequence, where $A_k\in\K^{n\times m}$, $B\in\K^{r\times n}$ and $C\in\K^{m\times s}$. If $\sum^\infty_{k=0}A_k$ converges, then the following equation holds
-	$$B\left(\sum^\infty_{k=0}A_k\right)C=\sum^\infty_{k=0}BA_kC$$
+	Let $\{A_k\}_{k=0}^\infty$ be a matrix sequence, where $A_k\in\K^{n\times m}$, $B\in\K^{r\times n}$ and $C\in\K^{m\times s}$. If $\sum^\infty_{k=0}A_k$ converges, then also $\sum^\infty_{k=0}A_k$ converges, and the following equality holds
+	$$B\left(\sum^\infty_{k=0}A_k\right)C=\sum^\infty_{k=0}BA_kC\ .$$
 \end{lemma}
 
 \begin{proof}
-	We know that for $N\in\N$ it holds
-	$$B\left(\sum^N_{k=0}A_k\right)C=\sum^N_{k=0}BA_kC$$
-	Now we have to show that the left side converges to $B\left(\sum^\infty_{k=0}A_k\right)C$. Let $\varepsilon\in\R,\varepsilon>0$ be fixed. We want to find such $N_0$ that for every $N\in\N,N\geq N_0$ it holds 
-	$$\norm{B\left(\sum^\infty_{k=0}A_k\right)C-B\left(\sum^N_{l=0}A_l\right)C}_F=\norm{B\left(\sum^\infty_{k=0}A_k-\sum^N_{l=0}A_l\right)C}_F<\varepsilon$$ 
-	Since $\sum^\infty_{k=0}\frac{1}{k!}A^k$ converges we can find such $N_1$ that $\forall N\geq N_1$ it holds
-	$$\norm{\sum^\infty_{k=0}A_k-\sum^N_{l=0}A_l}_F<\frac{\varepsilon}{\norm{B}_F\norm{C}_F}$$ 
-	Now we can write 
-	$$\norm{B\left(\sum^\infty_{k=0}A_k-\sum^N_{k=0}A_k\right)C}_F\leq\norm{B}_F\norm{\sum^\infty_{k=0}A_k-\sum^N_{k=0}A_k}_F\norm{C}_F<\varepsilon$$ 
-	By putting $N_0=N_1$ we show that the convergence holds and therefore we get the desired equation.
+	We know that for $N\in\N$ it is true
+	$$\sum^N_{k=0}BA_kC=B\left(\sum^N_{k=0}A_k\right)C\ .$$
+	We want to now show that the left hand side converges to $B\left(\sum^\infty_{k=0}A_k\right)C$. Let $\varepsilon_1\in\R^+$ be fixed. Since the series $\sum^\infty_{k=0}\frac{1}{k!}A^k$ converges we can find such that for every $N\in\N,N\geq N_0$ it holds 
+	\begin{align*}
+		\norm{B\left(\sum^\infty_{k=0}A_k\right)C-\sum^N_{l=0}BA_lC}_F&=
+		\norm{B\left(\sum^\infty_{k=0}A_k\right)C-B\left(\sum^N_{l=0}A_l\right)C}_F=\\
+		=\norm{B\left(\sum^\infty_{k=0}A_k-\sum^N_{l=0}A_l\right)C}_F&=
+		\norm{B}_F\norm{\sum^\infty_{k=0}A_k-\sum^N_{l=0}A_l}_F\norm{C}_F
+		<\norm{B}_F\norm{C}_F\varepsilon_1\ .
+	\end{align*}
+	That concludes the proof for $\varepsilon=\norm{B}_F\norm{C}_F\varepsilon_1$.
 \end{proof}
 
-\begin{remark}
-	We understand the differentiation of matrix elementwise, that is $$\frac{d}{dt}X=\left(\frac{d}{dt}x_{i,j}\right)$$
-\end{remark}
+\begin{definition}
+	TODO
+	Let us have a matrix function $X(t)\colon\R\rightarrow\K^{n\times m}$. Then the derivative of the function is $$\frac{d}{dt}X(t)=\left(\frac{d}{dt}x_{i,j}(t)\right)_{n\times m}=\Big(\dot{x}_{i,j}(t)\Big)_{n\times m}\ .$$
+\end{definition}
 
 \begin{lemma}
 \label{lem:expprop}
 	Let $A$, $B$ and $X$ be real or complex $n\times n$ matrices. Then 
 	\begin{enumerate}
-		\item $\sum _{k=0}^{\infty}\frac{1}{k!}X^{k}$ converges for any matrix $X$.
-		\item If $AB = BA$, then $e^{A}B = Be^{A}$
-		\item If $R$ is invertible, then $e^{R^{-1}XR}=R^{-1}e^XR$
-		\item $\frac{d}{dt}e^{tX}=Xe^{tX}$, for $t \in \R$
-		\item If $AB = BA$, then $e^{A+B} = e^{A}e^B$
+		\item \label{lem:point:expConv} $\sum _{k=0}^{\infty}\frac{1}{k!}X^{k}$ converges for any matrix $X$,
+		\item If $AB = BA$, then $e^{A}B = Be^{A}$,
+		\item If $R$ is invertible, then $e^{R^{-1}XR}=R^{-1}e^XR$,
+		\item $\frac{d}{dt}e^{tX}=Xe^{tX}$, for $t \in \R$,
+		\item If $AB = BA$, then $e^{A+B} = e^{A}e^B$.
 	\end{enumerate}
 \end{lemma}
 
@@ -124,26 +134,29 @@ For this definition to be valid, we need to show that the series converges for a
 		\item This can be shown by showing that sequence of partial sums $\{\sum^N_{k=0}\frac{1}{k!}X^k\}_{N=0}^\infty$ is Cauchy. Let $M$, $N\in \N$, then by Lemma \ref{lem:frobNormProperties} it holds
 		
 		\begin{longeq}
-			\norm{\sum^M_{k=0}\frac{1}{k!}X^k-\sum^N_{l=0}\frac{1}{l!}X^l}_F=\norm{\sum^M_{k=N+1}\frac{1}{k!}X^k}_F\leq\sum^M_{k=N+1}\frac{1}{k!}||X||^k_F=\norm{\sum^M_{k=0}\frac{1}{k!}\norm{X}_F^k-\sum^N_{l=0}\frac{1}{l!}\norm{X}_F^l}_F
+			\norm{\sum^M_{k=0}\frac{1}{k!}X^k-\sum^N_{l=0}\frac{1}{l!}X^l}_F=\norm{\sum^M_{k=N+1}\frac{1}{k!}X^k}_F\leq\sum^M_{k=N+1}\frac{1}{k!}||X||^k_F=\norm{\sum^M_{k=0}\frac{1}{k!}\norm{X}_F^k-\sum^N_{l=0}\frac{1}{l!}\norm{X}_F^l}_F.
 		\end{longeq}
 
-		Since $\{\sum^N_{k=0}\frac{||X||^k_F}{k!}\}_{N=0}^\infty$ is Cauchy, as it is sequence of partial sums of $e^{\norm{X}_F}$, which always converges, we can for any $\varepsilon>0$ find such $N_0$ that the first expression is strictly less then $\varepsilon$ and therefore the sequence $\{\sum^N_{k=0}\frac{1}{k!}X^k\}_{N=0}^\infty$ is Cauchy.
+		Since $\{\sum^N_{k=0}\frac{||X||^k_F}{k!}\}_{N=0}^\infty$ is Cauchy, as it is sequence of partial sums of $e^{\norm{X}_F}$, which always converges, we can for any $\varepsilon\in\R^+$ find such $N_0\in\N$ that for every $N, M\geq N_0$ is the last term, hence also the first one, strictly less then $\varepsilon$. Therefore, the sequence $\{\sum^N_{k=0}\frac{1}{k!}X^k\}_{N=0}^\infty$ is Cauchy.
 
 		\item
 		Because of the convergence of the matrix exponential we can use Lemma \ref{lem:matrixSeriesFactoring} and we get
-		$$e^{A}B=\sum^\infty_{k=0}\frac{1}{k!}A^{k}B\stackrel{AB=BA}{=\joinrel=\joinrel=}\sum^\infty_{k=0}\frac{1}{k!}BA^{k}=B\sum^\infty_{k=0}\frac{1}{k!}A^{k}=Be^{A}$$
+		$$e^{A}B=\sum^\infty_{k=0}\frac{1}{k!}A^{k}B\stackrel{AB=BA}{=\joinrel=\joinrel=}\sum^\infty_{k=0}\frac{1}{k!}BA^{k}=B\sum^\infty_{k=0}\frac{1}{k!}A^{k}=Be^{A}\ .$$
 		
 		\item From Lemma \ref{lem:matrixSeriesFactoring} follows
 		\begin{longeq}
-			e^{R^{-1}XR}=\sum^\infty_{k=0}\frac{1}{k!}(R^{-1}XR)^{k}=\sum^\infty_{k=0}\frac{1}{k!}R^{-1}X^{k}R=R^{-1}\left(\sum^\infty_{k=0}\frac{1}{k!}X^{k}\right)R=R^{-1}e^{X}R
+			e^{R^{-1}XR}=\sum^\infty_{k=0}\frac{1}{k!}(R^{-1}XR)^{k}=\sum^\infty_{k=0}\frac{1}{k!}R^{-1}X^{k}R=R^{-1}\left(\sum^\infty_{k=0}\frac{1}{k!}X^{k}\right)R=R^{-1}e^{X}R\ . 
 		\end{longeq}
 
-		\item The elements of the matrix $e^{tX}=\sum^\infty_{k=0}\frac{t^k}{k!}X^{k}=(e_{i,j}(t))$ are equal to $$e_{i,j}(t)=\sum^\infty_{k=0}\frac{t^k}{k!}a^{(k)}_{i,j}$$ where $X^k=(a^{(k)}_{i,j})$. To differentiate the elements of $e^{tX}$ we need to first show that the series converges for any $t\in\R$. By Lemma \ref{lem:elementAbsoluteSize} it holds $\abs*{a_{i,j}^{(k)}}\leq \norm{X}_F^k$. It follows $$\abs{\sum^\infty_{k=0}\frac{t^k}{k!}a^{(k)}_{i,j}}\leq\sum^\infty_{k=0}\frac{\abs{t}^k}{k!}\abs*{a^{(k)}_{i,j}}\leq \sum^\infty_{k=0}\frac{\norm{tX}_F^k}{k!}=e^{\norm{tX}_F}$$ 
+		\item The elements of the matrix $e^{tX}=\sum^\infty_{k=0}\frac{t^k}{k!}X^{k}=(e_{i,j}(t))$ are equal to
+		$$e_{i,j}(t)=\sum^\infty_{k=0}\frac{t^k}{k!}a^{(k)}_{i,j}\ ,$$
+		where $X^k=(a^{(k)}_{i,j})$. To differentiate the elements of $e^{tX}$ we need to first show that the series converges for any $t\in\R$. By Lemma \ref{lem:elementAbsoluteSize} it holds $\abs*{a_{i,j}^{(k)}}\leq \norm{X}_F^k$. It follows
+		$$\abs{\sum^\infty_{k=0}\frac{t^k}{k!}a^{(k)}_{i,j}}\leq\sum^\infty_{k=0}\frac{\abs{t}^k}{k!}\abs*{a^{(k)}_{i,j}}\leq \sum^\infty_{k=0}\frac{\norm{tX}_F^k}{k!}=e^{\norm{tX}_F}\ .$$
 		This shows that the series is absolutely convergent for every $t\in\R$. We can now differentiate the individual elements 
-		$$\frac{d}{dt}e_{i,j}(t)=\frac{d}{dt}\sum^\infty_{k=0}\frac{t^k}{k!}a^{(k)}_{i,j}=\sum^\infty_{k=1}\frac{t^{k-1}}{(k-1)!}a^{(k)}_{i,j}=\sum^\infty_{k=0}\frac{t^{k}}{k!}a^{(k+1)}_{i,j}$$ 
+		$$\frac{d}{dt}e_{i,j}(t)=\frac{d}{dt}\sum^\infty_{k=0}\frac{t^k}{k!}a^{(k)}_{i,j}=\sum^\infty_{k=1}\frac{t^{k-1}}{(k-1)!}a^{(k)}_{i,j}=\sum^\infty_{k=0}\frac{t^{k}}{k!}a^{(k+1)}_{i,j}\ .$$ 
 		Using Lemma \ref{lem:matrixSeriesFactoring} we get the desired result
 		\begin{longeq}
-			\frac{d}{dt}e^{tX}=\left(\frac{d}{dt}e_{i,j}(t)\right)_{n\times n}=\left(\sum^\infty_{k=0}\frac{t^{k}}{k!}a^{(k+1)}_{i,j}\right)_{n\times n}=\sum^\infty_{k=0}\frac{t^k}{k!}X^{k+1}=X\sum^\infty_{k=0}\frac{t^k}{k!}X^{k}=Xe^{tX}
+			\frac{d}{dt}e^{tX}=\left(\frac{d}{dt}e_{i,j}(t)\right)_{n\times n}=\left(\sum^\infty_{k=0}\frac{t^{k}}{k!}a^{(k+1)}_{i,j}\right)_{n\times n}=\sum^\infty_{k=0}\frac{t^k}{k!}X^{k+1}=X\sum^\infty_{k=0}\frac{t^k}{k!}X^{k}=Xe^{tX}\ .
 		\end{longeq}
 
 		\item Let us write 
@@ -154,29 +167,36 @@ For this definition to be valid, we need to show that the series converges for a
 			=\sum^\infty_{k=0}\sum^k_{l=0}\binom{k}{l}\frac{1}{k!}A^{l}B^{k-l}
 			\\
 			&=\sum^\infty_{k=0}\frac{1}{k!}(A+B)^{k}
-			=e^{A+B}
+			=e^{A+B}\ .
 		\end{align*}
-		The crucial point is the second equation in which we use Mertens' theorem. The theorem states that $\left(\sum_{i=0}^\infty a_i x^i\right) \cdot(\sum_{j=0}^\infty b_j x^j) = \sum_{k=0}^\infty a_l b_{k-l} x^k$ as long as at least one of the series on the left side is absolutely convergent. This condition is satisfied because matrix exponential converges absolutely for any matrix, as shown in the proof of the previous point. In the forth equation, we are using the assumption $AB=BA$. 
+		TODO
+		The crucial point is the second equation in which we use Mertens' theorem. The theorem states that $\left(\sum_{i=0}^\infty a_i x^i\right) \cdot(\sum_{j=0}^\infty b_j x^j) = \sum_{k=0}^\infty a_l b_{k-l} x^k$ as long as at least one of the series on the left side is absolutely convergent. This condition is satisfied because matrix exponential converges absolutely for any matrix, as shown in the proof of the previous point. In the forth equality, we are using the assumption $AB=BA$. 
 	\end{enumerate}
 \end{proof}
 
 \begin{remark}
-	$e^{\alpha I}=e^{\alpha}I$
+	TODO
+	The point \ref{lem:point:expConv} in Lemma \ref{lem:expprop} shows that the definition of the matrix exponential is valid.
 \end{remark}
 
+\begin{lemma}
+	\label{lem:matrixExpIdentity}
+	For any $\alpha\in\K$ we have $e^{\alpha I}=e^{\alpha}I$.
+\end{lemma}
+
 \begin{proof}
-	Straight from the definition.
+	Follows straight from the definition of the matrix exponential.
 \end{proof}
 
-Now, using properties from Lemma \ref{lem:expprop} we can see that $\dot{x}(t)=Ax(t)$ is actually solved by $x(t)=e^{tA}x(0)$. Let us now discuss under what circumstances does the state $x(t)$ converge to $\nullvector$ for $t\rightarrow\infty$. 
+Now, using properties from Lemma \ref{lem:expprop} we can see that $\dot{x}(t)=Ax(t)$ is actually solved by $x(t)=e^{tA}x(0)$. This solution is unique as a solution of a system of linear differential equation that satisfies its initial condition is unique. Let us now discuss under what circumstances does the state $x(t)$ converge to $\nullvector$ for $t\rightarrow\infty$. 
 
-Let $A$ be real or complex matrix. Then there is a regular matrix $R\in \C^{n\times n}$ such that $$J=R^{-1}AR$$ is in the Jordan normal form. By substituting $y(t)=R^{-1}x(t)$, which is equivalent with changing the basis of our system, we get 
+Let $A$ be real or complex matrix. Then there is a regular matrix $R\in \C^{n\times n}$ such that the matrix $$J=R^{-1}AR$$ is in the Jordan normal form. By substituting $x(t)=Ry(t)$, which is equivalent with changing the basis of our system, we get 
 \begin{align*}
 	R\dot{y}(t)&=ARy(t) \\
 	\dot{y}(t)&=R^{-1}ARy(t) \\
 	\dot{y}(t)&=Jy(t)
 \end{align*}
-and therefore the solution is $$y(t)=e^{tJ}y(0)$$ It is sufficient to show that $y(t)$ converges to \nullvector, because since $R$ is an invertible matrix, $y(t)$ converges to $\nullvector$ if and only if $x(t)$ converges to \nullvector.
+and therefore the unique solution is $$y(t)=e^{tJ}y(0)\ ,$$ where $y(0)=R^{-1}x(0)$. It is sufficient to show that $y(t)$ converges to \nullvector, because since $R$ is an invertible matrix,  $x(t)$ converges to $\nullvector$ if and only if $y(t)$ converges to $\nullvector$.
 
 We know that every Jordan block $J_{\lambda,n}$ in the matrix $J$ can be decomposed as $J_{\lambda,n}=\lambda I_n+N_n$, $n \in\N$ where $N_n$ is $n \times n$ nilpotent matrix satisfying $n_{i,j}=\delta_{i,j-1}$. For example, in case of $n=4$ we have
 \begin{equation*}
@@ -201,13 +221,21 @@ We know that every Jordan block $J_{\lambda,n}$ in the matrix $J$ can be decompo
 		0 & 0 & 0 & 0 \\
 		0 & 0 & 0 & 0 
 	\end{pmatrix}
+	.
 \end{equation*}
 It is also true that $(N_n)^k_{i,j}=\delta_{i,j-k}$ and $(N_n)^n=O_{n \times n}$, since every right multiplication by matrix $N$ shifts the multiplied matrix's columns to the right by one column, that is, it maps matrix $(v_1,\ldots,v_n)$ onto $(\nullvector,v_1,\ldots,v_{n-1})$. 
 
-By using Lemma \ref{lem:expprop}, we now for each Jordan block $J_{\lambda,n}$ have $$e^{tJ_{\lambda,n}}=e^{t(\lambda I + N)}=e^{t\lambda I}e^{tN}=e^{\lambda t}e^{tN}$$ Let $\lambda = a+ib$ where $a$,$b \in \R$. Then we have $$e^{tJ_{\lambda,n}}=e^{at}e^{ibt}e^{tN}$$ We know that $|e^{ibt}|=1$ and that $$e^{tN}=\sum^\infty_{k=0}\frac{t^k}{k!}N^k=\sum^{n-1}_{k=0}\frac{t^k}{k!}N^k$$ since $(N_n)^n=O_{n \times n}$. Therefore, we can see that every element of matrix $e^{tN}$ is a polynomial of degree less than $n$. It follows that $e^{tJ_{\lambda,n}}$ approaches $O_{n \times n}$ in infinity if $$\lim_{t\to\infty}e^{at}t^{n-1}=0$$ This holds for any $n\in\N$ as long as $a<0$. 
+By using Lemma \ref{lem:expprop}, we now for each Jordan block $J_{\lambda,n}$ have
+$$e^{tJ_{\lambda,n}}=e^{t(\lambda I + N)}=e^{t\lambda I}e^{tN}=e^{\lambda t}e^{tN}\ .$$
+Let $\lambda = a+ib$ where $a$,$b \in \R$. Then we have
+$$e^{tJ_{\lambda,n}}=e^{at}e^{ibt}e^{tN}\ .$$
+We know that $|e^{ibt}|=1$ and that
+$$e^{tN}=\sum^\infty_{k=0}\frac{t^k}{k!}N^k=\sum^{n-1}_{k=0}\frac{t^k}{k!}N^k$$
+since $(N_n)^n=O_{n \times n}$. Therefore, we can see that every element of matrix $e^{tN}$ is a polynomial in $t$ of degree less than $n$. It follows that $e^{tJ_{\lambda,n}}$ approaches $O_{n \times n}$ in infinity if
+$$\lim_{t\to\infty}e^{at}t^{n-1}=0\ .$$
+This holds for any $n\in\N$ as long as $a<0$. 
 
-Because $J$ to the power of any natural number holds its block form, we can write
-
+Because any block diagonal matrix to the power of any natural number preserves its block form, we can write
 \begin{equation*}
 	J=
 	\begin{pmatrix}
@@ -224,11 +252,12 @@ Because $J$ to the power of any natural number holds its block form, we can writ
 		\vdots & \vdots & \ddots & \vdots \\
 		0 & 0 & \ldots & e^{J_{\lambda_r,n_r}}
 	\end{pmatrix}
+	,
 \end{equation*}
 where zeroes in the matrices represent zero matrices of appropriate sizes. Therefore, since $y(0)$ is a constant vector, we see that $y(t)=e^{tJ}y(0)$ converges to $\nullvector$ if all the eigenvalues $\lambda_i$ of matrix $A$ have negative real parts. As the last step, we calculate $x(t)=Ry(t)$ and $x(0)=Ry(0)$.
 
 \begin{example}
-	Consider higher order differential equation $$x^{(n)}(t)+a_1x^{(n-1)}(t)+\ldots+a_{n-1}x'(t)+a_nx(t)=0$$ where $x(t)\colon\C\rightarrow\C$. This equation can be solved as system of linear differential equations of first order $\dot{z}(t)=Az(t)$ by choosing fundamental matrix $A$ and state vector $z(t)$ as follows
+	Consider higher order differential equation $$x^{(n)}(t)+a_1x^{(n-1)}(t)+\ldots+a_{n-1}x'(t)+a_nx(t)=0\ ,$$ where $x(t)\colon\C\rightarrow\C$. This equation can be solved as a system of linear differential equations of first order $\dot{z}(t)=Az(t)$ by choosing fundamental matrix $A$ and state vector $z(t)$ as follows
 	\begin{equation*}
 		A=
 		\begin{pmatrix}
@@ -244,16 +273,16 @@ where zeroes in the matrices represent zero matrices of appropriate sizes. There
 			x'(t) \\
 			\vdots \\
 			x^{(n-1)}(t)
-		\end{pmatrix}
+		\end{pmatrix}.
 	\end{equation*}
 \end{example}
 
 \subsection{Linear System With Control}
 
 \begin{definition}
-	A \termdef{continuous dynamical linear system with control u} is a system of linear differential equations of first order with constant coefficients in the form $$\dot{x}(t)=Ax(t)+Bu(t)$$ where $A\in\K^{n\times n}$ is a fundamental matrix, $B\in\K^{n\times m}$ is a \termdef{control matrix}, $u(t)\in\K^m$ is a \termdef{control vector}. Vector $x(t)\in\K^n$ is called a \termdef{state} of the system. The starting condition of the system is the state $x(0)$.
+	A \termdef{continuous dynamical linear system with control u} is a system of linear differential equations of first order with constant coefficients in the form $$\dot{x}(t)=Ax(t)+Bu(t)\ ,$$ where $A\in\K^{n\times n}$ is a fundamental matrix, $B\in\K^{n\times m}$ is a \termdef{control matrix}, $u(t)\in\K^m$ is a \termdef{control vector}. Vector $x(t)\in\K^n$ is called a \termdef{state} of the system. The starting condition of the system is the state $x(0)$.
 
-	We will regard this system as $(A,B)$ system.
+	We will call this system shortly $(A,B)$ system.
 \end{definition}
 
 In a general case, this is called an \termdef{open-loop control} system because the control is not dependent on previous state of the system.
@@ -263,23 +292,25 @@ We can imagine this system as follows. The first part of the right side, $Ax(t)$
 Of course, if we want this system to be self-regulating, we cannot input our own values into $u(t)$, and therefore it has to be calculated from the current state of our system.
 
 \begin{definition}
-	Let us have linear differential system with control $u(t)$ defined as follows $$u(t)=Fx(t)$$ where $F\in\C^{m\times n}$ is a \termdef{feedback matrix}. This system is then called a \termdef{closed-loop control} system or a \termdef{linear feedback control} system.
+	Let us have linear differential system with control $u(t)$ defined as
+	$$u(t)=Fx(t)\ ,$$
+	where $F\in\C^{m\times n}$ is a \termdef{feedback matrix}. This system is then called a \termdef{closed-loop control} system or a \termdef{linear feedback control} system.
 \end{definition}
 
-Typically, we require a feedback control system to stabilize itself back into its stable state after some disturbances. This means that we require that the system converges to some fixed point. In many practical applications we require that this point is the origin of our state space, i.e., all the possible states of $x(t)$.
+Typically, we require a feedback control system to stabilize itself back into its stable state after some disturbances. This means that we require that the system converges to some fixed point. In many practical applications we require that this point is the origin of our state space, i.e., the space of all possible states of $x(t)$.
 
-The feedback control system can be expressed as a first order linear differential system $$\dot{x}(t)=Ax(t)+BFx(t)=(A+BF)x(t)$$ TODO As discussed in the first section, we now know that the system converges to $\nullvector$ if all of the eigenvalues of matrix $A+BF$ have negative real parts. 
+The feedback control system can be expressed as a first order linear differential system $$\dot{x}(t)=Ax(t)+BFx(t)=(A+BF)x(t)\ .$$ As discussed in the first section, we now know that the system converges to $\nullvector$ if all of the eigenvalues of matrix $A+BF$ have negative real parts. 
 
-Therefore, the system can stabilize itself if we find such matrix $F \in \C^{n \times n}$ that all the eigenvalues of the matrix $A+BF$ have negative real parts. This requirement can be expressed through characteristic polynomial of the matrix $A+BF$, since roots of characteristic polynomial of a matrix are precisely the eigenvalues of said matrix.
+Therefore, the system can stabilize itself if we find such matrix $F \in \C^{n \times n}$ that all the eigenvalues of the matrix $A+BF$ have negative real parts. This requirement can be expressed through characteristic polynomial of the matrix $A+BF$, since roots of the characteristic polynomial of a matrix are precisely the eigenvalues of the matrix.
 
 \begin{definition}
-	Let $A$ be a $n\times n$ matrix. Then the \termdef{characteristic polynomial} of A, denoted by $\chi_A$, is defined as $$\chi_A(s)=\textnormal{det}(sI_n-A)$$
+	Let $A$ be a $n\times n$ matrix. Then the \termdef{characteristic polynomial} of A, denoted by $\chi_A$, is defined as $$\chi_A(s)=\textnormal{det}(sI_n-A)\ .$$
 \end{definition}
 
-Through our observations we got to a conclusion, that through our choice of the feedback matrix $F$ we need to satisfy the condition $$\chi_{A+BF}=(x-\lambda_1)(x-\lambda_2)\cdots(x-\lambda_n)$$ where $\lambda_1,\lambda_2,\ldots,\lambda_n \in \C$ have negative real parts. This leads to an important definition.
+Through our observations we got to a conclusion, that through our choice of the feedback matrix $F$ we need to satisfy the condition $$\chi_{A+BF}=(x-\lambda_1)(x-\lambda_2)\cdots(x-\lambda_n)\ ,$$ where $\lambda_1,\lambda_2,\ldots,\lambda_n \in \C$ have negative real parts. This leads to an important definition.
 
 \begin{definition}
-    Let $\K$ be a field and let $A \in \K^{n \times n}$, $B \in \K^{n \times m}$, $n,m \in \N$. We say that polynomial $\chi$ is \termdef{assignable} for the pair $(A,B)$ if there exists such matrix $F\in\K^{m \times n}$ that $$\chi_{A+BF}=\chi$$
+    Let $\K$ be a field and let $A \in \K^{n \times n}$, $B \in \K^{n \times m}$, $n,m \in \N$. We say that polynomial $\chi$ is \termdef{assignable} for the pair $(A,B)$ if there exists such matrix $F\in\K^{m \times n}$ that $$\chi_{A+BF}=\chi\ .$$
 \end{definition}
 
 The pole shifting theorem states, that if $A$ and $B$ are ``sensible'' in a sense that we will discuss in the next section, then arbitrary polynomial $\chi$ of degree that depends on how ``sensible'' $A$ and $B$ are, can be assigned to the pair $(A,B)$. It also claims that it is immaterial over what field $A$ and $B$ are.
